--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,41 @@
-# ============================================
-# REQUIREMENTS.TXT - ECONOMIZA+ MVP
-# ============================================
-# Projeto: Sistema de Recomendação Financeira
-# Python: 3.8+
-# Última atualização: Janeiro 2025
-# ============================================
-
-# ============================================
-# MANIPULAÇÃO DE DADOS
-# ============================================
-pandas==2.0.3
-numpy==1.24.3
-
-# ============================================
-# MACHINE LEARNING
-# ============================================
-scikit-learn==1.3.0
-
-# ============================================
-# VISUALIZAÇÃO
-# ============================================
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# ============================================
-# JUPYTER NOTEBOOKS
-# ============================================
-jupyter==1.0.0
-ipykernel==6.25.0
-ipywidgets==8.1.0
-
-# ============================================
-# OPCIONAL: ANÁLISE ESTATÍSTICA ADICIONAL
-# ============================================
-scipy==1.11.1
-
-# ============================================
-# OPCIONAL: PROGRESS BARS
-# ============================================
-tqdm==4.66.1
-
-# ============================================
-# NOTAS DE USO
-# ============================================
-# Instalação:
-# pip install -r requirements.txt
-#
-# Ou com --break-system-packages (necessário em alguns ambientes):
-# pip install -r requirements.txt --break-system-packages
-#
-# Para Google Colab:
-# !pip install -r requirements.txt
-#
-# ============================================
-# VERSÕES TESTADAS
-# ============================================
-# Este projeto foi testado com:
-# - Python 3.10.12 (Google Colab)
-# - Python 3.8+ (local)
-#
-# ============================================
-# BIBLIOTECAS JÁ INCLUÍDAS NO GOOGLE COLAB
-# ============================================
-# O Google Colab já possui a maioria dessas
-# bibliotecas pré-instaladas. Este arquivo
-# garante versões específicas e compatibilidade.
-#
-# ============================================
-# FUNCIONALIDADES POR BIBLIOTECA
-# ============================================
-#
-# pandas: Manipulação de DataFrames (CSVs)
-# numpy: Operações numéricas e arrays
-# scikit-learn: K-means, Isolation Forest, StandardScaler, métricas
-# matplotlib: Gráficos básicos (Elbow curve, boxplots)
-# seaborn: Visualizações estatísticas avançadas
-# jupyter: Ambiente de notebooks
-# scipy: Cálculos estatísticos (z-score, etc)
-# tqdm: Barras de progresso (opcional)
-#
+asttokens==3.0.1
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.19
+decorator==5.2.1
+executing==2.2.1
+fonttools==4.61.1
+ipykernel==7.1.0
+ipython==9.9.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+nest-asyncio==1.6.0
+numpy==2.4.1
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pexpect==4.9.0
+pillow==12.1.0
+platformdirs==4.5.1
+prompt_toolkit==3.0.52
+psutil==7.2.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.2
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+seaborn==0.13.2
+six==1.17.0
+stack-data==0.6.3
+tornado==6.5.4
+traitlets==5.14.3
+tzdata==2025.3
+wcwidth==0.2.14
