--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ipykernel==7.1.0
 ipython==9.9.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+joblib==1.5.3
 jupyter_client==8.8.0
 jupyter_core==5.9.1
 kiwisolver==1.4.9
@@ -32,9 +33,13 @@ pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
+scikit-learn==1.8.0
+scipy==1.17.0
 seaborn==0.13.2
 six==1.17.0
+sklearn-preprocessing==0.1.0
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.5.4
 traitlets==5.14.3
 tzdata==2025.3
